tests/fixtures/errors/unknown_ref.ksr
// Unknown graph reference: @z is never declared
param x: Dimensionless = 1.0;
node y: Dimensionless = @z + 1.0;
